add: DTO Classes, slf4j logging